Modified the project files

--- a/index.html
+++ b/index.html
@@ -8,26 +8,55 @@
   <title>Document</title>
   <script src="js/jquery.js" charset="utf-8"></script>
   <script src="js/tictactoe.js" charset="utf-8"></script>
+  <script src="js/tictactoe2.js" charset="utf-8"></script>
 </head>
 <body>
-  <h1>Tic Tac Toe<h1>
-  <hr>
-  <div id='boxgrid'>
-    <div class='row'>
-      <div class="box 1" id='one'></div>
-      <div class="box 2" id='two'></div>
-      <div class="box 3" id='three'></div>
-  </div>
-    <div class='row'>
-      <div class="box 4" id='four'></div>
-      <div class="box 5" id='five'></div>
-      <div class="box 6" id='six'></div>
+
+  <h1>Tic Tac & Toe</h1>
+
+  <div class="twolabels">
+    <div class="score1">
+      <label for="score1"><h4>Player1 Score</h4></label>
+      <input type="text" class='player1' placeholder="player1">
     </div>
-    <div class='row'>
-      <div class="box 7" id='seven'></div>
-      <div class="box 8" id='eight'></div>
-      <div class="box 9" id='nine'></div>
+    <div class="score2">
+      <label for="score2"><h4>Player2 Score</h4></label>
+      <input type="text" class='player2' placeholder="player2">
     </div>
   </div>
+
+  <div class="playerimages">
+    <div id="image1">
+      <img src="http://www.sherv.net/cm/emoticons/basketball/basketball-spin-smiley-emoticon.gif" height="50" width="50">
+    </div>
+    <div id="image2">
+      <img src="http://www.picgifs.com/smileys/smileys-and-emoticons/basketball/smileys-basketball-624299.gif" height="50" width="50">
+    </div>
+  </div>
+
+<div class='wrapper' id='boxgrid'>
+  <div class='gameboard'>
+    <div class='row1'>
+      <div class="box 1" id='0'></div>
+      <div class="box 2" id='1'></div>
+      <div class="box 3" id='2'></div>
+    </div>
+    <div class='row2'>
+      <div class="box 4" id='3'></div>
+      <div class="box 5" id='4'></div>
+      <div class="box 6" id='5'></div>
+    </div>
+    <div class='row3'>
+      <div class="box 7" id='6'></div>
+      <div class="box 8" id='7'></div>
+      <div class="box 9" id='8'></div>
+    </div>
+  </div>
+
+  <div class="resetbutton">
+        <input type="button" value="Reset" onClick="window.location.reload()">
+  </div>
+</div>
+
 </body>
 </html>
